Working implementation of time synchronizer process